tests/lean/1513.lean.expected.out
1513.lean:2:3: error: tactic failed, there are unsolved goals
state:
m : ℕ,
h : m = 0
⊢ m = 0
1513.lean:8:0: error: tactic failed, there are unsolved goals
state:
n : ℕ,
a : n > 0,
y : ℕ := 10,
a_1 : y > 5,
a_2 : n ≠ y
⊢ y + 1 = 1 + y
